Fixed flex spacing on book list

--- a/react-starter/bookist/src/App.css
+++ b/react-starter/bookist/src/App.css
@@ -75,6 +75,7 @@ main {
   width: 70%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   padding: 10px;
 }
 
